--- a/.github/workflows/build-linux-arm64.yml
+++ b/.github/workflows/build-linux-arm64.yml
@@ -54,6 +54,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: telluride_linux.arm64
+          name: telluride_linux_arm64
           path: ${{ github.ref_name != '' && github.ref_name || 'manual-build' }}
           retention-days: 90
