--- a/.github/workflows/build-linux-x86_64.yml
+++ b/.github/workflows/build-linux-x86_64.yml
@@ -48,6 +48,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: telluride-linux-x86_64
+          name: telluride_linux_x86_64
           path: ${{ github.ref_name != '' && github.ref_name || 'manual-build' }}
           retention-days: 90
