--- a/.github/workflows/build-macos-arm64.yml
+++ b/.github/workflows/build-macos-arm64.yml
@@ -50,6 +50,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: telluride-macos-arm64
+          name: telluride_macos_arm64
           path: ${{ github.ref_name != '' && github.ref_name || 'manual-build' }}
           retention-days: 90
