--- a/.github/workflows/build-macos-x86_64.yml
+++ b/.github/workflows/build-macos-x86_64.yml
@@ -50,6 +50,6 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
-          name: telluride-macos-x86_64
+          name: telluride_macos_x86_64
           path: ${{ github.ref_name != '' && github.ref_name || 'manual-build' }}
           retention-days: 90
